--- a/view/equipe.html
+++ b/view/equipe.html
@@ -10,5 +10,251 @@
 
 
 	<body>
+
+		<div id="menu">
+			<ul>
+				<li><a href="index.html#designer_home"><img src="logoNome.png"></a></li>
+				<li><a href="index.html#designer_we_are"> Quem Somos</a></li>
+				<li><a href="index.html#designer_team"> Equipe</a></li>
+				<li><a href="index.html#designerService"> Serviços</a></li>
+				<li><a href="index.html#designer_portfolio"> Portifólio</a></li>
+				<li><a href="index.html#divContato"> Contato</a></li>
+			</ul>			
+		</div>
 		
+		<div id="designer_img">
+			
+			<div class="title">
+				CONHEÇA O NOSSO TIME
+			</div>
+			<br>
+			<br>
+			<div class="boxPortfolio">
+				<div class="boxLetters">
+					PROFESSOR ORIENTADOR
+				</div>
+			</div>
+			<br>
+			<!--PRIMEIRA FILA IMAGEM-->
+			<div class="container_portfolio">
+
+				<div>
+					<img class="container_team" src="orientador-1.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Victor Sarinho</strong>
+							<br>
+							Orientador
+						</button>
+						</a>
+					</div>
+				</div>
+			</div>
+			<br>
+			<div class="boxPortfolio">
+				<div class="boxLetters">
+					DIRETORES
+				</div>
+			</div>
+			<br>
+			<!--PRIMEIRA FILA IMAGEM-->
+			<div class="container_portfolio">
+
+				<div>
+					<img class="container_team" src="member-05.jpg">
+					<div> 
+						<a><button class="buttonPortfolio"> 
+							<stong>Marcos Antonio</strong>
+							<br>
+							Presidente 
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-11.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Natália Rosa</strong>
+							<br>
+							Vice-Presidente 
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-08.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Rodrigo Santos</strong>
+							<br>
+							Diretor de Marketing 
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-09.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Carlos Tinin</strong>
+							<br>
+							Diretor de Projetos
+						</button>
+						</a>
+					</div>
+				</div>
+			</div>
+			<br> <br>
+
+			<!--segunda FILA IMAGEM-->
+			<div class="container_portfolio">
+				<div>
+					<img class="container_team" src="member-01.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Adriel Brito</strong>
+							<br>
+							Diretor de Recursos Humanos
+						</button>
+						</a>
+					</div>
+				</div>
+			</div>
+			<br><br><br>
+			<div class="boxPortfolio">
+				<div class="boxLetters">
+					MEMBROS CONSULTORES
+				</div>
+			</div>
+			<br>
+
+			<!--PRIMEIRA FILA IMAGEM-->
+			<div class="container_portfolio">
+
+				<div>
+					<img class="container_team" src="member-13.jpg">
+					<div> 
+						<a><button class="buttonPortfolio"> 
+							<stong>Anderson da Luz Correia</strong>
+							<br>
+							Membro Consultor 
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-15.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Nadime Centeno</strong>
+							<br>
+							Membro Consultor
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-06.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Rafael Brito</strong>
+							<br>
+							Membro Consultor
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-03.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Diego Silva</strong>
+							<br>
+							Membro Consultor
+						</button>
+						</a>
+					</div>
+				</div>
+
+			</div>
+			<br> <br>
+			<!--PRIMEIRA FILA IMAGEM-->
+			<div class="container_portfolio">
+
+				<div>
+					<img class="container_team" src="member-16.jpg">
+					<div> 
+						<a><button class="buttonPortfolio"> 
+							<stong>João Samuel</strong>
+							<br>
+							Membro Consultor 
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-12.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>William de Lima Ribeiro</strong>
+							<br>
+							Membro Consultor
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-14.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Daniel Santa Rosa</strong>
+							<br>
+							Membro Consultor
+						</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="container_team" src="member-07.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>Mateus Guimarães</strong>
+							<br>
+							Membro Consultor
+						</button>
+						</a>
+					</div>
+				</div>
+
+			</div>
+			<br> <br>
+			
+			<!--segunda FILA IMAGEM-->
+			<div class="container_portfolio">
+				<div>
+					<img class="container_team" src="member-04.jpg">
+					<div> 
+						<a><button class="buttonPortfolio">
+							<stong>João Pedro Moura</strong>
+							<br>
+							Membro Consultor
+						</button>
+						</a>
+					</div>
+				</div>
+			</div>
+			<br><br><br>
+		</div>
+
 	</body>
+</html>
